tests/should-fail/syntax-error.ta3
sa7e7 bedayah() {
  sa7e7 $s = 10
  basy 0
}